--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,6 +11,7 @@ steps:
     provider: 'azurerm'
     command: 'init'
     workingDirectory: '$(System.DefaultWorkingDirectory)/G10_Avnesh'
+    backendAzureRmUseEntraIdForAuthentication: false
     backendServiceArm: 'Avnesh'
     backendAzureRmStorageAccountName: 'avstorage12'
     backendAzureRmContainerName: 'avneshcontainer'
