--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,19 +4,18 @@ pool: Avnesh_group
 steps:
 - task: TerraformInstaller@1
   inputs:
-    terraformVersion: '1.12.0'
+    terraformVersion: 'latest'
 
 - task: TerraformTask@5
   inputs:
     provider: 'azurerm'
     command: 'init'
     workingDirectory: '$(System.DefaultWorkingDirectory)/G10_Avnesh'
-    backendAzureRmUseEntraIdForAuthentication: false
     backendServiceArm: 'Avnesh'
     backendAzureRmStorageAccountName: 'avstorage12'
     backendAzureRmContainerName: 'avneshcontainer'
     backendAzureRmKey: 'Avnesh.tfstate'
-    backendAzureRmResourceGroupName: 'AV_RG'
+    
 
 
     
