Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -28,7 +28,7 @@ jobs:
   steps:
   - task: ManualValidation@1
     inputs:
-      notifyUsers: 'avneshkushwaha@gmail.com'
+      notifyUsers: 'avneshkushwaha1289@gmail.com'
       approvers: 'please approve'
 
 
