Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -29,7 +29,8 @@ jobs:
   - task: ManualValidation@1
     inputs:
       notifyUsers: 'avneshkushwaha1289@gmail.com'
-      approvers: 'please approve'
+      approvers: 'avneshkushwaha1289@gmail.com'
+      instructions: 'please approve'
 
 
 - job: Terraformplan
